feat(backend): Implementei CRUD das disciplinas
